<resources>
    <string name="app_name" translatable="false">FABLAB</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="kods">Internal code</string>
    <string name="nosaukums">Name of the inventory item</string>
    <string name="units">Unit</string>
    <string name="name_hints">Name</string>
    <string name="kods_hints">Code number</string>
    <string name="qrcode">hi</string>
    <string name="submit">Add</string>
    <string name="izvelies">Select type</string>
    <string name="menu_home">Home</string>
    <string name="menu_equip">New Equipment</string>
    <string name="menu_assign">Assign Tasks</string>
    <string name="menu_logs">Activity Logs</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_report">Report</string>
    <string name="menu_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="stations">Stations</string>
    <string name="calendar">Calendar</string>
    <string name="stock">Warehouse</string>
    <string name="new_event">Sign up</string>
    <string name="addevent">Registration form</string>
    <string name="select" translatable="false">Select</string>
    <string name="messages_header" translatable="false">Messages</string>
    <string name="sync_header" translatable="false">Sync</string>
    <string name="language_settings_header">Language Settings</string>
    <string name="signature_title" translatable="false">Your signature</string>
    <string name="reply_title" translatable="false">Default reply action</string>
    <string name="sync_title" translatable="false">Sync email periodically</string>
    <string name="attachment_title" translatable="false">Download incoming attachments</string>
    <string name="attachment_summary_on" translatable="false">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off" translatable="false">Only download attachments when manually requested</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="register_user">Register</string>
    <string name="name">Full name</string>
    <string name="forgot_pass">Forgot password?</string>
    <string name="ielogoties">Log in</string>
    <string name="konts_ir">Log in</string>
    <string name="konts_nav">Register</string>
    <string-array name="theme_titles">
        <item>FABLAB</item>
        <item>Greenhouse</item>
    </string-array>
    <string-array name="theme_values">
        <item>fablab</item>
        <item>home</item>
    </string-array>
    <string-array name="language_titles">
        <item>English</item>
        <item>Latvian</item>
    </string-array>
    <string-array name="language_values">
        <item>en</item>
        <item>lv</item>
    </string-array>
    <string name="settings_lang">Select Language</string>
    <string name="settings_sublang">Choose the language for the app</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_subtheme">Choose Theme</string>
    <string name="settings_signout">Sign Out</string>
    <string name="settings_subsignout">Sign out of your account</string>
    <string name="settings_reset">Reset password</string>
    <string name="settings_subreset">Reset your password</string>
    <string name="change_language">Change Language</string>
    <string name="scanned">Scanned: %1$s</string>
    <string name="cancelled_scan">Cancelled scan</string>
    <string name="cancelled_scan_permission">Cancelled due to missing camera permission</string>
    <string name="invalid_scan">Invalid scan. Please try again.</string>
    <string name="select_language">Select Language</string>
    <string name="english">English</string>
    <string name="latvian">Latvian</string>
    <string name="sort_logs">Sort Logs</string>
    <string name="currently_sorted_by_most_recent_log">Currently sorted by: Most Recent Log</string>
    <string name="currently_sorted_by_oldest_log">Currently sorted by: Oldest Log</string>
    <string name="currently_sorted_by_name">Currently sorted by: Name</string>
    <string name="currently_sorted_by_item_name">Currently sorted by: Title</string>
    <string name="assign_task">Assign Task</string>
    <string name="select_user">Select User</string>
    <string name="urgent">Urgent</string>
    <string name="not_urgent">Not Urgent</string>
    <string name="task_description">Task Description</string>
    <string name="room_nr">Room nr</string>
    <string name="station_nr">Station nr</string>
    <string name="item_name">"Subject name "</string>
    <string name="describe_problem">"Describe the problem and how it happened "</string>
    <string name="apraksti_probl">"Describe the problem "</string>
    <string name="nosutit">Send</string>
    <string name="no_equipment_to_show">No equipment to show</string>
    <string name="refresh">Refresh</string>
    <string name="tas_desc">Task Description</string>
    <string name="complete_btn">Complete</string>
    <string name="time">Deadline: 31/12/2022</string>
    <string name="status">Status: Incomplete</string>
    <string name="assignment_by">Assigned by: John Doe</string>
    <string name="deadline">"Deadline: "</string>
    <string name="status_item">"Status: "</string>
    <string name="assigned_by_items">"Assigned by: "</string>
    <string name="subtract">Subtract</string>
    <string name="add">Add</string>
    <string name="ievadi_skaitli_cik_liels_daudzums">Enter number (How big/quantity)</string>
    <string name="pievienot_att">Add a picture</string>
    <string name="apraksts">Description</string>
    <string name="max_stock">max stock</string>
    <string name="min_stock">min stock</string>
    <string name="crit_stock">crit stock</string>
    <string name="no_file_selected">No file selected</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="check_con">Check your Internet Connection and Try Again</string>
    <string name="try_again">Try Again</string>
    <string name="urgency">Is it urgent?</string>
    <string name="birthday">Birthday</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="add_event">Add Event</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="pick_date">Pick Date</string>
    <string name="pick_start_time">Pick Start Time</string>
    <string name="pick_end_time">Pick End Time</string>
    <string name="number_of_people">Number of People</string>
    <string name="submit_event">Submit</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="finish">Finish</string>
    <string name="ok_button">Ok</string>
    <string name="events_title">Events</string>
    <string name="start_time">Start Time: %1$s</string>
    <string name="end_time">End Time: %1$s</string>
    <string name="titleE">Title: %1$s</string>
    <string name="descriptionE">Description: %1$s</string>
    <string name="status_event">Status:</string>
    <string name="Instruction_stock">Instruction</string>
    <string name="stock_st">Stock</string>
    <string name="minimum_stock_0">Minimum stock: %1$d</string>
    <string name="stock_0">Stock: %1$d</string>
    <string name="maximum_stock_0">Maximum stock: %1$d</string>
    <string name="critical_stock_0">Critical stock: %1$d</string>
    <string name="yoda_was_here">A</string>
    <string name="man_im_dead">A</string>
    <string name="status_succ">Event status updated to: %1$s</string>
    <string name="status_err">Failed to update event status</string>
    <string name="stock_new">Stock</string>
    <string name="izg_code">Education administration code</string>
    <string name="enter_value_max_8_digits">Enter value</string>
    <string name="desc_text">Description</string>
    <string name="info_izg_code">
        <![CDATA[
    <b>Enter a numeric limit for the equipment</b>, which can be up to 8 digits long. This limit is used for tracking purposes and should be within the expected range for the equipment.
        ]]>
</string>
    <string name="info_stock">
        <![CDATA[
    <br><b>Critical Stock:</b> Specify the stock level at which you need to reorder this equipment immediately. If the stock falls below this number, you will be alerted.</br>
    <br><b>Min Stock:</b> The minimum quantity of the equipment you want to keep in stock. When stock reaches this level, consider ordering more.</br>
    <br><b>Max Stock:</b> The maximum quantity of the equipment you want to keep in stock. This helps prevent overstocking.</br>
        ]]>
</string>
    <string name="info_code">
        <![CDATA[
    <br><b>This field represents the unique identifier for each piece of equipment, following a specific format:</b></br>
    <br><b>Example:</b> 2_3_1_Drill</br>
    <br>- <b>Room Number:</b> 2 (Can be a two-digit number)</br>
    <br>- <b>Station Number:</b> 3 (Can be a two-digit number)</br>
    <br>- <b>Type of Item:</b> 1 (Asset) (2 = Consumable)</br>
    <br>- <b>Name of Item:</b> Drill</br>
    <br>Enter the equipment code according to this structure. The code should be unique and adhere to the specified format.
        ]]>
</string>
    <string name="urgentt">Urgent</string>
    <string name="not_urgentt">Not Urgent</string>
    <string name="info_code_title">Information</string>
    <string name="info_default">No information available.</string>
    <string name="room">Room: %1$s</string>
    <string name="edit">Edit</string>
    <string name="max_change">Enter the new maximum stock value:</string>
    <string name="max_changetitle">Edit Maximum Stock</string>
    <string name="add_to_the_stock">Add to the stock</string>
    <string name="subtract_from_the_stock">Subtract from the stock</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="important">"Urgency status: "</string>
    <string name="loading_data">Loading data...</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="please_enter_your_registered_email_to_receive_password_reset_link">Please enter your registered email to receive password reset link</string>
    <string name="ievadiet_savu_epastu">Enter your email</string>
    <string name="reset_password">Reset Password</string>
    <string name="incomplete">incomplete</string>
    <string name="complete">complete</string>
    <string name="errorMsg">Registration failed! Please check your information.</string>
    <string name="DatabaseError">Failed to save user to database!</string>
    <string name="emailError">Failed to verify email validity!</string>
    <string name="emailExists">This email is already registered! Try logging in.</string>
    <string name="menu_update">Change user statuss</string>
    <string name="update_user">Change user statuss</string>
    <string name="delete">Delete user</string>
    <string name="error_name_required">First and last name are required!</string>
    <string name="error_email_required">Email not entered!</string>
    <string name="error_invalid_email">Please enter a valid email!</string>
    <string name="error_invalid_email_domain">Email domain not supported! Use e.g. Gmail, Yahoo, Outlook, etc.</string>
    <string name="error_dob_required">Please select a date of birth!</string>
    <string name="error_password_required">Password not entered!</string>
</resources>