<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:key="language_preference"
        android:title="@string/settings_lang"
        android:summary="@string/settings_sublang"
        android:entries="@array/language_titles"
        android:entryValues="@array/language_values" />

    <ListPreference
        android:key="theme_preference"
        android:title="@string/settings_theme"
        android:summary="@string/settings_theme"
        android:dialogTitle="@string/settings_subtheme"/>

    <Preference
        android:key="sign_out"
        android:title="@string/settings_signout"
        android:summary="@string/settings_subsignout"/>

    <Preference
        android:key="password_reset"
        android:title="@string/settings_reset"
        android:summary="@string/settings_subreset"/>

</PreferenceScreen>
