<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/new_equip"
            android:icon="@drawable/nav_add"
            android:title="@string/menu_equip"
            />
        <item
            android:id="@+id/nav_task"
            android:icon="@drawable/nav_task"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_assign"
            android:icon="@drawable/assign_tasks"
            android:title="@string/menu_assign"/>
        <item
            android:id="@+id/nav_updateuser"
            android:icon="@drawable/updateusers"
            android:title="@string/menu_update"/>
        <item
            android:id="@+id/nav_logs"
            android:icon="@drawable/data_log"
            android:title="@string/menu_logs" />
        <item
            android:id="@+id/nav_report"
            android:icon="@drawable/nav_report"
            android:title="@string/menu_report" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/nav_settings"
            android:title="@string/menu_settings" />
    </group>
</menu>