<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.authen.RegisterUser">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/fablablogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/name_surname"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="176dp"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/date_of_birth"
        android:layout_width="243dp"
        android:layout_height="54dp"
        android:layout_marginTop="12dp"
        android:gravity="center_vertical"
        android:hint="@string/birthday"
        android:padding="15dp"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:src="@drawable/edit_text_background"
        app:layout_constraintEnd_toStartOf="@+id/date_picker_button"
        app:layout_constraintHorizontal_bias="0.825"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_surname" />

    <ImageButton
        android:id="@+id/date_picker_button"
        android:layout_width="50dp"
        android:layout_height="49dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="56dp"
        android:background="?android:attr/selectableItemBackground"
        android:contentDescription="test"
        android:src="@android:drawable/ic_menu_my_calendar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_surname" />

    <EditText
        android:id="@+id/email"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_of_birth" />

    <EditText
        android:id="@+id/password_repeat"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_marginTop="8dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.468"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/station_rounded_button"
        android:text="@string/register_user"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat" />

    <Button
        android:id="@+id/register"
        android:layout_width="133dp"
        android:layout_height="48dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="16dp"
        android:textAllCaps="false"
        style="?android:attr/borderlessButtonStyle"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        android:text="@string/konts_ir"
        android:textAlignment="center"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_button" />

    <ProgressBar
        android:id="@+id/progress_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_repeat"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>
